--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,11 @@
 		<version>3.2.5</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.</groupId>
-	<artifactId>wether-application</artifactId>
+	<groupId>io.securepath</groupId>
+	<artifactId>AuthSphere-application</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>wether-application</name>
-	<description>API Based Wether Application</description>
+	<name>AuthSphere-application</name>
+	<description>AOauth Server</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
